# vs-miscfilters-obsolete

./: meson.build
msvc_project/: MiscFilters.sln  MiscFilters.vcxproj  MiscFilters.vcxproj.filters
src/: miscfilters.cpp
